# NTNU_COM_JANUSxSDM

./: .gitignore  README.md
2023NTNU_ROV_COM/: 1_RX_ToFile_TheRealOne  1_RX_ToFile_TheRealOne.cpp  1_TX_ToFile_TheRealOne  1_TX_ToFile_TheRealOne.cpp  2_RX_TryTOFiksFirstPkgProb  2_RX_TryTOFiksFirstPkgProb.cpp  MajaRX_MenDenneFungererIkkjeForHoPå198  MajaRX_MenDenneFungererIkkjeForHoPå198.cpp  README.md  RX_TheRealOne  RX_testdag  RX_testdag.cpp  TX_TheRealOne  a_RX  a_RX.cpp  a_TX  a_TX.cpp  a_TXnew  a_TXnew.cpp  maja_RX  maja_RX copy  maja_RX copy 2  maja_RX copy 2.cpp  maja_RX copy.cpp  maja_RX.cpp  master_finished  master_finished.cpp  modemSetup.cpp  myRX_test.txt  slave_draft.cpp  slave_finished.cpp
2023NTNU_ROV_COM/info_files/: node_info.csv
2023NTNU_ROV_COM/lib/Evo_janusXsdm/: Evo_janusXsdm.cpp  Evo_janusXsdm.h
2023NTNU_ROV_COM/lib/fftw/fftw-3.3.10/: Makefile  config.status
2023NTNU_ROV_COM/lib/janus-c-3.0.5/: readme.txt
2023NTNU_ROV_COM/lib/janus-c-3.0.5/data/: FindNumberOfsamples  janusMessage.raw
2023NTNU_ROV_COM/lib/janus-c-3.0.5/doc/: Doxyfile.in
2023NTNU_ROV_COM/lib/janus-c-3.0.5/etc/: parameter_sets.csv  txcfg.ini
2023NTNU_ROV_COM/lib/janusxsdm/: Evo_janusXsdm.cpp  Evo_janusXsdm.h  SimpleTestRX  SimpleTestRX.cpp  SimpleTestTX.cpp  TODO.txt  janusxsdm.cpp  janusxsdm.h
2023NTNU_ROV_COM/lib/sdmsh/: preamble.raw  sdmsh  sdmsh.c  sdmsh_commands.c  shell.c  shell_completion.c
2023NTNU_ROV_COM/lib/tools/: Evologics_1834_config.sh  janus-send.sh
2023NTNU_ROV_COM/src/: RXandTX_example  RXandTX_example.cpp  janusMain.cpp  janusRCV.cpp  janusSND.cpp  janus_snd.sh  login.sh  rxFamily_example  rxFamily_example.cpp  rxOnce_example  rxOnce_example.cpp  sdmRCV.cpp  sdmsh_snd.sh  total_read.cpp  tx_example  tx_example.cpp
2023NTNU_ROV_COM/sup_com/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
2023NTNU_ROV_COM/sup_com/src/log/: latest_build
2023NTNU_ROV_COM/sup_com/src/sup_com/: CMakeLists.txt  package.xml
Downloads/fftw-3.3.10/: Makefile  config.h  config.status  libtool
Downloads/fftw-3.3.10/api/: Makefile
Downloads/fftw-3.3.10/api/.deps/: configure.Plo  execute-dft-r2c.Plo  execute-split-dft.Plo  export-wisdom-to-string.Plo  forget-wisdom.Plo  import-system-wisdom.Plo  import-wisdom-from-string.Plo  mkprinter-file.Plo  mktensor-iodims64.Plo  plan-dft-3d.Plo  plan-dft-c2r-2d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-2d.Plo  plan-dft.Plo  plan-guru-dft-c2r.Plo  plan-guru-dft.Plo  plan-guru-r2r.Plo  plan-guru64-split-dft-c2r.Plo  plan-r2r-1d.Plo  plan-r2r-3d.Plo  the-planner.Plo  version.Plo
Downloads/fftw-3.3.10/dft/: Makefile
Downloads/fftw-3.3.10/dft/.deps/: dftw-direct.Plo  dftw-directsq.Plo  dftw-generic.Plo  dftw-genericbuf.Plo  indirect.Plo  kdft-difsq.Plo  nop.Plo
Downloads/fftw-3.3.10/dft/scalar/: Makefile
Downloads/fftw-3.3.10/dft/simd/: Makefile
Downloads/fftw-3.3.10/doc/: Makefile
Downloads/fftw-3.3.10/doc/FAQ/: Makefile
Downloads/fftw-3.3.10/genfft/: Makefile
Downloads/fftw-3.3.10/kernel/: Makefile
Downloads/fftw-3.3.10/kernel/.deps/: awake.Plo  md5-1.Plo  scan.Plo  solvtab.Plo  tensor2.Plo  tensor3.Plo
Downloads/fftw-3.3.10/libbench2/: Makefile
Downloads/fftw-3.3.10/libbench2/.deps/: after-ccopy-to.Po  after-hccopy-to.Po  bench-cost-postprocess.Po  can-do.Po  caset.Po  info.Po  main.Po  mflops.Po  my-getopt.Po  problem.Po  report.Po  speed.Po  useropt.Po  verify-rdft2.Po
Downloads/fftw-3.3.10/m4/: Makefile
Downloads/fftw-3.3.10/mpi/: Makefile
Downloads/fftw-3.3.10/rdft/: Makefile
Downloads/fftw-3.3.10/rdft/.deps/: buffered.Plo  ct-hc2c.Plo  hc2hc-generic.Plo  hc2hc.Plo  kr2c.Plo  nop2.Plo  rank0-rdft2.Plo  rdft2-rdft.Plo  (+1 more)
Downloads/fftw-3.3.10/reodft/: Makefile
Downloads/fftw-3.3.10/simd-support/: Makefile
Downloads/fftw-3.3.10/support/: Makefile
Downloads/fftw-3.3.10/tests/: Makefile
Downloads/fftw-3.3.10/threads/: Makefile
Downloads/fftw-3.3.10/tools/: Makefile
fftw/fftw-3.3.10/: libfftw3.la
fftw/fftw-3.3.10/libbench2/: Makefile
fftw/fftw-3.3.10/tools/: fftw-wisdom
lib/Evo_janusXsdm/: Evo_janusXsdm.cpp  Evo_janusXsdm.h
lib/fftw/fftw-3.3.10/: libtool
lib/janus-c-3.0.5/: CMakeLists.txt  cfg.ini
lib/janus-c-3.0.5/cmake/: Macros.cmake  Toolchain.cmake
lib/janus-c-3.0.5/cmake/libraries/: alsa.cmake  wmm.cmake
lib/janus-c-3.0.5/cmake/modules/: FindFFTW3.cmake  Subversion.cmake
lib/janus-c-3.0.5/data/: FindNumberOfsamples.cpp  decodedJanus.txt
lib/janus-c-3.0.5/etc/: rxcfg.ini  txcfg_rawfile.ini
lib/janus-c-3.0.5/programs/: dump_tables.c
lib/janus-c-3.0.5/src/c/cli/: main.c  options.c  options.def  options.h  string.h
lib/janus-c-3.0.5/src/c/janus/: carrier_sensing.h  chips_alignment.c  chips_alignment.h  complex.c  convolve.c  crc.h  demodulator.c  demodulator.h  doppler.c  doppler.h  dump.h  goertzel.c  interleave.c  modulator.h  packet.c  packet.h  primitive.c  pset.c  pset.h  pset_parser.c  rx.h  rx_state.h  simple_rx.c  simple_rx.h  simple_tx.h  trellis.c  trellis.h  tx.c  tx_state.h  viterbi.c  wake_up_tones.h
lib/janus-c-3.0.5/src/c/janus/codec/: codec.h  codecs.c  codecs.h  fields.c  plugin.c  plugin.h
lib/janus-c-3.0.5/src/c/janus/stream/: format.c  format.h  istream.def  istream_fifo.c  istream_null.c  istream_pulse.c  istream_raw.c  istream_tcp.c  istream_wmm.c  ostream.c  ostream_alsa.c  ostream_null.c  ostream_pulse.c  ostream_raw.c
lib/janus-c-3.0.5/src/c/janus/utils/: bin2dec.c  bin2dec.h  dec2bin.c  fifo.c  fir.c  gcd.c  go_cfar.c  go_cfar.h  imath.h  memory.h  primes.c  tukey_window.c
lib/janus-c-3.0.5/src/c/mex/: janus_rx_mex.c  mex_utils.c
lib/janus-c-3.0.5/src/c/plugins/: plugin_000_01.c  plugin_000_03.c  plugin_016_00.c  plugin_016_01.c
lib/janus-c-3.0.5/tests/c/: hop_index.c  interleaver.c  packet.c  wakeup_tones.c
lib/sdmsh/: sdmsh  sdmsh.c
lib/tools/: janus-listen.sh  sdmsh_listen.sh
src/: JANUS.txt  JANUS_frame.txt  RXandTX_example  RXandTX_example.cpp  ost.txt  rxFamily_example  rxFamily_example.cpp  rxOnce_example  rxOnce_example.cpp  rxSomtimesTX  rxSomtimesTX.cpp  rx_cargo.txt  tx_example  tx_example.cpp
(+564 files in other folders)
